# backend/src/routes/asset.routes.js
@@ -1,16 +1,18 @@
 import express from "express";
 import { authMiddleware } from "../middlewares/auth.middleware.js";
 
-import { getAsset, searchAssets, scanAssetsByRFID } from "../controllers/asset.controller.js";
+import { getAsset, searchAssets, scanAssetsByRFID, getAssetMetadata } from "../controllers/asset.controller.js";
 import { getAssetDetails } from "../controllers/asset.controller.js";
 import { getAssetsByZone } from "../controllers/asset.controller.js";
 
 
 const router = express.Router();
 
+router.get("/search", authMiddleware, searchAssets);
+
 router.get("/details", authMiddleware, getAssetDetails);
 
-router.get("/search", authMiddleware, searchAssets);
+router.get("/metadata", authMiddleware, getAssetMetadata);
 
 router.post("/rfid/scan", authMiddleware, scanAssetsByRFID);
 
